# dem_lic

./: .buildinfo  .gitignore  README.html  README.md  README.rst  cli.html  cli.md  cli.rst  conf.py  documentation.html  genindex.html  index.html  index.md  index.rst  modules.html  modules.rst  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage_manual.html  usage_manual.md  usage_manual.rst
.github/workflows/: gh-pages.yml
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: README.rst.txt  index.rst.txt
_modules/: index.html  lic_extended.html  morpho_dem.html
_sources/: README.rst.txt  index.md.txt
_sources/apidocs/: index.rst.txt
_sources/apidocs/dem_lic/: dem_lic.main_lic_extended.md.txt  dem_lic.md.txt  (+2 more)
_sources/documentation/: cli.md.txt  usage_manual.md.txt
_sources/reference/: index.md.txt
apidocs/: index.html
apidocs/dem_lic/: dem_lic.cli.html  dem_lic.html  dem_lic.main_lic_extended.html  dem_lic.utils.html  dem_lic.utils.lic_extended.html  dem_lic.utils.lic_extended.md  dem_lic.utils.md  dem_lic.utils.morpho_dem.html  dem_lic.utils.morpho_dem.md
docs/: conf.py  documentation.md  index.md  usage_manual.md
docs/documentation/: cli.md  install.md
docs/reference/: index.md
documentation/: cli.html  install.html  usage_manual.html
reference/: index.html
src/: LIC_extended_main.py
src/dem_lic/: cli.py  main_lic_extended.py  test_lic_extended.py
(+6 files in other folders)
