[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dem_lic"
version = "1.0.0"
description = "A Python package for DEM generalization using Line Integral Convolution (LIC)."
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Edmond SAINT DENIS", email = "edmond.saint-denis@ign.fr"}
]
keywords = ["DEM", "LIC", "terrain generalization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "rasterio",
    "scipy",
    "tqdm",
]

[project.scripts]
dem_lic = "dem_lic.cli:main"

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
